--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 networks:
-  network:
+  hank-net:
     driver: bridge
     ipam:
       config:
@@ -31,7 +31,7 @@ services:
     restart: always
     container_name: couchdb
     networks:
-      network:
+      hank-net:
         ipv4_address: 192.168.200.10
     ports:
       - 5984:5984
